k8s/ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /fms(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: first-micro-service
              port:
                number: 8080
        - path: /scrapy(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: scrapy
              port:
                number: 8323
        - path: /sms(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: second-micro-service
              port:
                number: 8081
        - path: /pusers(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: fa-users
              port:
                number: 8082
        - path: /recommend(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: fa-priporocila
              port:
                number: 8083
        - path: /commentsms(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: comments-ms
              port:
                number: 8324
        - path: /receptims(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: fa-recepti
              port:
                number: 8004
        - path: /kosaricems(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: fa-kosarice
              port:
                number: 8003
        - path: /frontend(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: frontend-vue
              port:
                number: 8353

#kubectl get ingress
